add JDK_JAVA_OPTIONS for cli